test/tests/compiler/18_structures/valid/import_and_use/plx1_use_stdlib__Exit.plx
use "stdlib"

pub fn main(none) i32 {
    _Exit(0)
    return 1
}
