test/tests/compiler/18_structures/invalid_lex/plx1_force_use_again.plx
use `stdlib`

pub fn main(none) i32 {
    use! `stdlib`
    return 0
}
